# GauzyUI

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  setup.bat  vcpkg.json
.opencode/skills/cpp-code-review/: SKILL.md
docs/: DPI适配方案.md  TODO.md  TextFormat.md
include/: Util.hpp  Window.hpp
include/comp/: CompGroup.hpp  Component.hpp  ComponentGroup.hpp  Interactive.hpp  Label.hpp
include/event/: ComponentEventContext.hpp  Event.hpp  EventContext.hpp  WindowEventContext.hpp  WindowMessageDispatcher.hpp
include/graphic/: Brush.hpp  Drawable.hpp  Renderer.hpp  TextFormat.hpp  Theme.hpp
include/type/: BasicTypes.hpp  Color.hpp  InputTypes.hpp  Vec2d.hpp  WindowHandle.hpp
src/: Test.cpp  Util.cpp  Window.cpp
src/comp/: CompGroup.cpp  Component.cpp  ComponentGroup.cpp  Label.cpp
src/event/: EventContext.cpp  WindowMessageDispatcher.cpp
src/graphic/: Brush.cpp  Renderer.cpp  TextFormat.cpp
src/type/: BasicTypes.cpp  Color.cpp  InputTypes.cpp  WindowHandle.cpp
test/: comp_test.cpp  test.cpp
